Fix one pattern that has the wrong width

--- a/nlw/share/skin/starfish/css/960_24_minus.css
+++ b/nlw/share/skin/starfish/css/960_24_minus.css
@@ -324,7 +324,7 @@
 .container_24 .grid_21 .grid_minus_18,
 .container_24 .grid_22 .grid_minus_19,
 .container_24 .grid_23 .grid_minus_20,
-.container_24 .grid_24 .grid_minus_21 { width: 150px }
+.container_24 .grid_24 .grid_minus_21 { width: 110px }
 
 /* grid_2 */
 .container_24 .grid_2  .grid_minus_0,
